# ravenwallet-android

./: .gitignore  .gitmodules  build.gradle
app/: CMakeLists.txt
app/spv/: com_ravencoin_core_BRCoreTransaction.c  com_ravencoin_core_BRCoreTransactionAsset.c  com_ravencoin_core_BRCoreWallet.c
app/spv/core/: BRCrypto.c  BRCrypto.h  BRPeer.c  BRPeer.h  BRTransaction.c  BRTransaction.h
gradle/wrapper/: gradle-wrapper.properties
